complytax-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: complytax
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: complytax
  template:
    metadata:
      labels:
        app: complytax
    spec:
      containers:
        - name: complytax
          image: ujjawaltgs/complytax:1a2b3c4
          ports:
            - containerPort: 9090

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 180
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 220
            periodSeconds: 20
