holidaybreakz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holidaybreakz
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: holidaybreakz
  template:
    metadata:
      labels:
        app: holidaybreakz
    spec:
      containers:
        - name: holidaybreakz
          image: ujjawaltgs/holidaybreakz:latest   # ONLY change here
          ports:
            - containerPort: 8080
