service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friendztravel-service
  namespace: default
spec:
  selector:
    app: friendztravel
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
