holidaybreakz-ingress.yaml
apiVersion: networking.k8s.io/v2
kind: Ingress
metadata:
  name:holidaybreakz-ingress
spec:
  rules:
  - http:
      paths:
      - path: /holidaybreakz
        pathType: Prefix
        backend:
          service:
            name: holidaybreakz-service
            port:
              number: 80
