ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: friendztravel-ingress
    namespace: default
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: friendztravel-service
                port:
                  number: 80
